--- a/src/news/crown-0-59.mdx
+++ b/src/news/crown-0-59.mdx
@@ -11,11 +11,11 @@ characters, improved 3D sound spatialization, redesigned scripting component cal
 Writing Gameplay manual section and the usual batch of bug fixes.
 
 Moreover, the 01-physics sample has been updated to showcase several new features. Play it on your
-browser at https://www.crownengine.org/play
+browser at [https://www.crownengine.org/play](https://www.crownengine.org/play).
 
   * 📜 [Changelog](https://docs.crownengine.org/html/latest/changelog.html#oct-2025)
   * 💾 [Download](https://crownengine.org/download)
   * 👍 [Follow](https://x.com/crown_engine)
-  * ❤️  [Donate](https://crownengine.org/fund)
+  * ❤️ [Donate](https://crownengine.org/fund)
 
 ![physics](https://github.com/user-attachments/assets/e7db7636-c28d-45a5-b292-f71c7dc81e20)
