news: add featured image

--- a/src/news/crown-0-59.mdx
+++ b/src/news/crown-0-59.mdx
@@ -3,6 +3,7 @@ title: Crown 0.59
 slug: /news/crown-0-59
 date: 2025-10-02
 author: Daniele Bartolini
+image: crown-0-59.jpg
 ---
 
 Crown 0.59 is out! This is a massive update with many rendering-related additions (spotlight
