news: cards and other improvements

--- a/src/news/crown-0-52.mdx
+++ b/src/news/crown-0-52.mdx
@@ -3,6 +3,7 @@ title: Crown 0.52
 slug: /news/crown-0-52
 date: 2024-11-12
 author: Daniele Bartolini
+image: crown-0-52.png
 ---
 
 Crown 0.52 is out with ability to add/remove Unit components, many Camera enhancements, improved Gui
@@ -12,4 +13,4 @@ subsystem, enriched Hi-DPI (SVG icons!), and some important Runtime corrections:
   * 💾 [Download](https://crownengine.org/download)
   * ❤️ [Donate](https://crownengine.org/fund)
 
-![editor](https://github.com/user-attachments/assets/bd63a347-8bc5-4fbe-be31-5779578dbeba)
+![editor](./crown-0-52.png)
