--- a/src/news/crown-0-53.mdx
+++ b/src/news/crown-0-53.mdx
@@ -3,6 +3,7 @@ title: Crown 0.53
 slug: /news/crown-0-53
 date: 2024-11-30
 author: Daniele Bartolini
+image: crown-0-53-gui.png
 ---
 
 Crown 0.53 is out with a new API for 3D GUIs, conditional render states, refined Sprite and Font
@@ -12,5 +13,5 @@ importers, thumbnails in the Project Tree and many Runtime fixes:
   * 💾 [Download](https://crownengine.org/download)
   * ❤️ [Donate](https://crownengine.org/fund)
 
-![Screenshot From 2024-11-30 00-34-09](https://github.com/user-attachments/assets/293c1106-657c-45f1-a0d7-81adf2be0d72)
-![Screenshot From 2024-11-29 22-09-07](https://github.com/user-attachments/assets/320006e9-93c0-4c0c-a33a-b75af75000a7)
+![gui](crown-0-53-gui.png)
+![sprite](crown-0-53-sprite.png)
