--- a/src/news/crown-0-54.mdx
+++ b/src/news/crown-0-54.mdx
@@ -3,6 +3,7 @@ title: Crown 0.54
 slug: /news/crown-0-54
 date: 2025-01-13
 author: Daniele Bartolini
+image: crown-0-54.png
 ---
 
 Crown 0.54 is out with right-handed Z-up world coordinates, FBX scene importer, strengthened SJSON
@@ -13,6 +14,6 @@ and many other improvements and fixes:
   * 💾 [Download](https://crownengine.org/download)
   * ❤️ [Donate](https://crownengine.org/fund)
 
-![image](https://github.com/user-attachments/assets/79abb46e-5e16-4045-8dc4-acd4c05cd8ab)
+![image](./crown-0-54.png)
 
 P.S: Lamp model from ufbx library docs.
