--- a/src/news/crown-0-56.mdx
+++ b/src/news/crown-0-56.mdx
@@ -3,6 +3,7 @@ title: Crown 0.56
 slug: /news/crown-0-56
 date: 2025-06-04
 author: Daniele Bartolini
+image: crown-0-56.png
 ---
 
 Crown 0.56 is out with cascaded shadow mapping, OGG/Vorbis sound streaming, improved text rendering
@@ -12,5 +13,5 @@ and many important fixes:
   * 💾 [Download](https://crownengine.org/download)
   * ❤️ [Donate](https://crownengine.org/fund)
 
-![image](https://github.com/user-attachments/assets/cf6ba86e-af06-4f74-9bf7-e1a500a557d8)
+![image](./crown-0-56.png)
 
