--- a/src/news/crown-0-57.mdx
+++ b/src/news/crown-0-57.mdx
@@ -3,6 +3,7 @@ title: Crown 0.57
 slug: /news/crown-0-57
 date: 2025-06-13
 author: Daniele Bartolini
+image: crown-news-placeholder.png
 ---
 
 Crown 0.57 is out! This is a maintenance release with fixed shadow maps, hot-reloading and outlines
