--- a/src/news/crown-0-58.mdx
+++ b/src/news/crown-0-58.mdx
@@ -3,6 +3,7 @@ title: Crown 0.58
 slug: /news/crown-0-58
 date: 2025-08-01
 author: Daniele Bartolini
+image: crown-0-58.png
 ---
 
 Crown v0.58 is out with a new fog simulation component, improved resource importing experience,
@@ -12,4 +13,4 @@ greatly optimized mesh compilation times and the usual load of fixes.
   * 💾 [Download](https://crownengine.org/download)
   * ❤️ [Donate](https://crownengine.org/fund)
 
-<img width="2002" height="1062" alt="v0 58" src="https://github.com/user-attachments/assets/f4845ab4-ca5e-4b4c-8286-0fdd2c395b2e" />
+![image](./crown-0-58.png)
