--- a/src/news/crown-0-59-1.mdx
+++ b/src/news/crown-0-59-1.mdx
@@ -3,6 +3,7 @@ title: Crown 0.59.1
 slug: /news/crown-0-59-1
 date: 2025-10-13
 author: Daniele Bartolini
+image: crown-news-placeholder.png
 ---
 
 Crown v0.59.1 is out! This is a tiny release with fixed state machine creation, improved
