--- a/src/news/crown-0-59-2.mdx
+++ b/src/news/crown-0-59-2.mdx
@@ -3,6 +3,7 @@ title: Crown 0.59.2
 slug: /news/crown-0-59-2
 date: 2025-10-20
 author: Daniele Bartolini
+image: crown-news-placeholder.png
 ---
 
 Crown v0.59.2 is out with fixed materials hot-reload and no more errors when opening large levels.
