--- a/src/news/crown-0-59-3.mdx
+++ b/src/news/crown-0-59-3.mdx
@@ -3,9 +3,10 @@ title: Crown 0.59.3
 slug: /news/crown-0-59-3
 date: 2025-10-31
 author: Daniele Bartolini
+image: crown-news-placeholder.png
 ---
 
-Crown v0.59.3 is out with 4 bug fixes:
+Crown v0.59.3 is out with fixes for importing non-animated FBX files, minor UI corrections and some runtime API and stability improvements.
 
   * 📜 [Changelog](https://docs.crownengine.org/html/v0.59.0/changelog.html#v0-59-3)
   * 💾 [Download](https://crownengine.org/download)
