--- a/src/news/crown-0-59-4.mdx
+++ b/src/news/crown-0-59-4.mdx
@@ -3,6 +3,7 @@ title: Crown 0.59.4
 slug: /news/crown-0-59-4
 date: 2025-11-14
 author: Daniele Bartolini
+image: crown-news-placeholder.png
 ---
 
 Crown 0.59.4 is out! This tiny release fixes spot lights shadows on Windows and cascaded shadow maps
