--- a/src/news/crown-0-59.mdx
+++ b/src/news/crown-0-59.mdx
@@ -19,4 +19,4 @@ browser at [https://www.crownengine.org/play](https://www.crownengine.org/play).
   * 👍 [Follow](https://x.com/crown_engine)
   * ❤️ [Donate](https://crownengine.org/fund)
 
-![physics](https://github.com/user-attachments/assets/e7db7636-c28d-45a5-b292-f71c7dc81e20)
+![physics](./crown-0-59.jpg)
