--- a/src/news/crown-0-60.mdx
+++ b/src/news/crown-0-60.mdx
@@ -1,6 +1,6 @@
 ---
 title: Crown 0.60
-slug: /news/crown-0.60
+slug: /news/crown-0-60
 date: 2025-12-30
 author: Daniele Bartolini
 image: crown-0-60-animation-editor.png
