news: fix spelling

--- a/src/news/crown-0-60.mdx
+++ b/src/news/crown-0-60.mdx
@@ -22,7 +22,7 @@ complex 3D skeletal animations.
 Additionally, the Project Browser now features a **Global Search Bar**, making
 it much easier to work with large projects full of assets. The Level Tree has
 also been enhanced with improved search functionality. On the Runtime side, you
-will be pleased to know that **Shadow Maps** has been implementd for
+will be pleased to know that **Shadow Maps** has been implemented for
 omni-directional lights.
 
 On top of that, a total of **29 bugs have been fixed** in this release. Take a
